--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "cross-env NODE_ENV=test npm run db:migrate:test && nyc mocha 'test/**/*.js' --recursive --timeout 60000 --exit",
     "dev": "nodemon --exec npx babel-node src/bin/www.js",
-    "start": "npm run build && node build/bin/www",
+    "start": "node src/bin/www.js",
     "generate-docs": "jsdoc -c conf.json",
     "build": "npx babel src --copy-files --out-dir build",
     "db:migrate": "npx sequelize db:migrate",
